fix: ultrawide breakpoint being waaay too high

--- a/humitifier-server/assets/css/tailwind.input.css
+++ b/humitifier-server/assets/css/tailwind.input.css
@@ -96,7 +96,7 @@
 
   --color-primary: #ffcd00;
 
-  --breakpoint-ultrawide: 625rem;
+  --breakpoint-ultrawide: 100rem;
 }
 
 @utility container {
